Bug 446337 - Source outline should be displayed in Slideout - Added timeout message when outline service takes too long to respond

--- a/bundles/org.eclipse.orion.client.ui/web/edit/common.css
+++ b/bundles/org.eclipse.orion.client.ui/web/edit/common.css
@@ -46,6 +46,13 @@
 	width: 16px; /*16px standard indent*/
 }
 
+.outlineTimeoutSpan {
+	color: red;
+	display: inline-block;
+	margin: 10px 6px;
+	position: relative;
+}
+
 .findOptionsDiv {
 	display: inline-block;
 	margin: 0;
